--- a/index.html
+++ b/index.html
@@ -81,16 +81,95 @@
 
   <main>
     <section class="container mt-5">
-      <div>
-
-        <h2 class="d-flex justify-content-center">Discover Our Popular Courses</h2>
-        <p class="">It is a long established fact that a reader will be distracted by the readable
-          content of a page when looking at its layout.</p>
+      <div class="row">
+        <div class=" text-center">
+          <h2>Discover Our Popular Courses</h2>
+          <p> <small>It is a long established fact that a reader will be
+            distracted by the readable content of a page when looking at its layout.</small> </p>
+        </div>
       </div>
     </section>
+
+<!-- categories start -->
     <section>
 
+      <div class="container text-start my-5">
+        <div class="row g-2 categories">
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class=" p-3 border bg-white d-flex align-items-center justify-content-around  rounded-3">
+                   <img src="images/course/course-1.png" alt=""> 
+                   <div class="ps-4">
+                     <h4>Fundamental Of UI/UX Design</h4>
+                     <p><small>Some quick example text to build on the card title 
+                       and make up the bulk of the card.</small></p>
+                       <h6 class="text-primary">Price : 20$</h6>
+                      </div>   
+                </div>
+
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+              <div class=" p-3 border bg-white d-flex align-items-center justify-content-around  rounded-3">
+                 <img src="images/course/course-2.png" alt=""> 
+                 <div class="ps-4">
+                  <h4>Fundamental Of UI/UX Design</h4>
+                  <p><small>Some quick example text to build on the card title 
+                    and make up the bulk of the card.</small></p>
+                    <h6 class="text-primary">Price : 20$</h6>
+                 </div>   
+              </div>
+
+          </div>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class=" p-3 border bg-white d-flex align-items-center justify-content-around  rounded-3">
+               <img src="images/course/course-3.png" alt=""> 
+               <div class="ps-4">
+                <h4>Fundamental Of UI/UX Design</h4>
+                <p><small>Some quick example text to build on the card title 
+                  and make up the bulk of the card.</small></p>
+                  <h6 class="text-primary">Price : 20$</h6>
+               </div>   
+            </div>
+
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class=" p-3 border bg-white d-flex align-items-center justify-content-around  rounded-3">
+             <img src="images/course/course-4.png" alt=""> 
+             <div class="ps-4">
+              <h4>Fundamental Of UI/UX Design</h4>
+              <p><small>Some quick example text to build on the card title 
+                and make up the bulk of the card.</small></p>
+                <h6 class="text-primary">Price : 20$</h6>
+             </div>   
+          </div>
+
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class=" p-3 border bg-white d-flex align-items-center justify-content-around  rounded-3">
+           <img src="images/course/course-5.png" alt=""> 
+           <div class="ps-4">
+            <h4>Fundamental Of UI/UX Design</h4>
+            <p><small>Some quick example text to build on the card title 
+              and make up the bulk of the card.</small></p>
+              <h6 class="text-primary">Price : 20$</h6>
+           </div>   
+        </div>
+
+    </div>
+    <div class="col-lg-6 col-md-12 col-sm-12">
+      <div class=" p-3 border bg-white d-flex align-items-center justify-content-around  rounded-3">
+         <img src="images/course/course-6.png" alt=""> 
+         <div class="ps-4">
+          <h4>Fundamental Of UI/UX Design</h4>
+          <p><small>Some quick example text to build on the card title 
+            and make up the bulk of the card.</small></p>
+            <h6 class="text-primary">Price : 20$</h6>
+         </div>   
+       </div>
+      </div>
+    </div>
+  </div>
     </section>
+    <!-- categories end -->
   </main>
 
 
