--- a/index.html
+++ b/index.html
@@ -52,24 +52,35 @@
 
     <!-- slider start -->
     <section class="container">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
         <div class="carousel-inner">
-
           <div class="carousel-item active">
-            <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="...">
-
+            <img src="images/cover/cover-1.png" class="d-block w-100 black-shadow" alt="...">
+            <div class="carousel-caption d-md-block">
+              <h4>Get Started Digital Learning</h4>
+              <p><small>It is a long established fact that a reader will be distracted by the 
+                readable content of a page when looking at its layout.</small></p>
+                <button class="btn btn-primary">Get Started</button>
+            </div>
           </div>
           <div class="carousel-item">
-            <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
+            <img src="images/cover/cover-3.jpg" class="d-block w-100 black-shadow" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -93,7 +104,7 @@
 <!-- categories start -->
     <section>
 
-      <div class="container text-start my-5">
+      <div class="container text-start mt-3">
         <div class="row g-2 categories">
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class=" p-3 border bg-white d-flex align-items-center justify-content-around  rounded-3">
@@ -168,8 +179,68 @@
       </div>
     </div>
   </div>
+  <div class="d-grid gap-2 col-1 mx-auto mt-2 ">
+    <button class="btn btn-primary" type="button">VIEW ALL</button>
+    </div>
     </section>
+    
     <!-- categories end -->
+
+    <!-- Successfull Students -->
+    <section class="container mt-5">
+      <div class="row">
+        <div class=" text-center">
+          <h2>Meet Our Successfull Students</h2>
+          <p> <small>It is a long established fact that a reader will be 
+            distracted by the readable content of a page when 
+            looking at its layout.</small> </p>
+        </div>
+      </div>
+    </section>
+    
+      <section class="container my-3" id="student">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+            <div class="col">
+                <div class="card border border-0 shadow-lg h-100">
+                    <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Awlad Hossain</h5>
+                        <p class="card-text">UIUX Designer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                  <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                      <h5 class="card-title">Jannatul Islam</h5>
+                      <p class="card-text">Web developer</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+            <div class="card border border-0 shadow-lg h-100">
+                <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Imran Hossain</h5>
+                    <p class="card-text">Graphic Designer</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+          <div class="card border border-0 shadow-lg h-100">
+              <img src="images/student/student-4.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                  <h5 class="card-title">Nishi Akter</h5>
+                  <p class="card-text">Motion Design</p>
+              </div>
+          </div>
+      </div>
+    </div>
+
+    </section>
+
+    <!-- Successfull Students -->
   </main>
 
 
