--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@
     
     <!-- categories end -->
 
+    <section style="height: 300px;" class=" container text-center mt-5  bg-info rounded-3 d-flex justify-content-center align-items-center">
+      <div>
+          <h2>Ready to join?</h2>
+          <P>It is a long established fact that a reader will be distracted by the 
+            readable content of a page when looking at its layout.</P>
+          <form>
+
+            <a href=""><button type="submit" class="btn btn-info bg-primary text-white">Registration</button></a> 
+          </form>
+      </div>
+
+  </section>
+
     <!-- Successfull Students -->
     <section class="container mt-5">
       <div class="row">
@@ -244,7 +257,7 @@
 
     <!-- Successfull Students -->
 
-    
+
     <section class="container mt-5">
       <div class="row">
         <div class=" text-center">
@@ -301,6 +314,19 @@
     </section>
     <!-- flush end -->
   </main>
+
+  <!-- footer start -->
+  <footer>
+    <div style="height: 300px;" class="text-center text-white  mt-5  bg-dark rounded-3 d-flex justify-content-center align-items-center">
+      <div>
+      <h2>w3 School</h2>
+      <p>Gulshan - Dhaka ,1212</p>
+      <p>Privacy Ploicy | Terms of use</p>
+      </div>
+    </div>
+
+  </footer>
+  <!-- footer end -->
 
 
 
